--- a/package.json
+++ b/package.json
@@ -19,9 +19,17 @@
   "devDependencies": {
     "@types/node": "^25.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^6.0.0-dev.20260120"
   },
   "dependencies": {
     "axios": "^1.13.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/42bangkok-classroom/typescript-oop-2026-mid-exam-NUTTOD.git"
+  },
+  "bugs": {
+    "url": "https://github.com/42bangkok-classroom/typescript-oop-2026-mid-exam-NUTTOD/issues"
+  },
+  "homepage": "https://github.com/42bangkok-classroom/typescript-oop-2026-mid-exam-NUTTOD#readme"
 }
